{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 38,
  "lineage": "d746cc1e-1124-3a52-f3d7-819f082a9208",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:listener/app/main-alb/eb941f1eaea6b7a9/09690a9d686b9775",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:730825214764:certificate/8e9a430f-93c9-46d3-be7a-b8efa7c8868f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:listener/app/main-alb/eb941f1eaea6b7a9/09690a9d686b9775",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:loadbalancer/app/main-alb/eb941f1eaea6b7a9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.www_kiryong_shop",
            "aws_lb.alb",
            "aws_lb_target_group.alb_target",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f375b54be4ab849",
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:instance/i-025903f4ace14d436",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025903f4ace14d436",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "seoul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043df6d04bc7b2b90",
            "private_dns": "ip-10-0-11-2.ap-northeast-2.compute.internal",
            "private_ip": "10.0.11.2",
            "public_ip": "3.35.140.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab1de89be795990a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037ba56ba98683364",
            "tags": {
              "Name": "WEB-0"
            },
            "tags_all": {
              "Name": "WEB-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07102bbd6d2f05cda"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f375b54be4ab849",
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:instance/i-0e592c861d4b0b46d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e592c861d4b0b46d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "seoul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c49c7bc4c32e2901",
            "private_dns": "ip-10-0-24-216.ap-northeast-2.compute.internal",
            "private_ip": "10.0.24.216",
            "public_ip": "52.78.140.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c58aef0e84b35df5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003967d1ff648f21a",
            "tags": {
              "Name": "WEB-1"
            },
            "tags_all": {
              "Name": "WEB-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07102bbd6d2f05cda"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:internet-gateway/igw-05cf5313b6cdfc172",
            "id": "igw-05cf5313b6cdfc172",
            "owner_id": "730825214764",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:loadbalancer/app/main-alb/eb941f1eaea6b7a9",
            "arn_suffix": "app/main-alb/eb941f1eaea6b7a9",
            "dns_name": "main-alb-75214255.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:loadbalancer/app/main-alb/eb941f1eaea6b7a9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-alb",
            "security_groups": [
              "sg-0afaa4940b943a43d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003967d1ff648f21a"
              },
              {
                "subnet_id": "subnet-037ba56ba98683364"
              }
            ],
            "subnets": [
              "subnet-003967d1ff648f21a",
              "subnet-037ba56ba98683364"
            ],
            "tags": {
              "Environment": "development",
              "Name": "main-alb"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "main-alb"
            },
            "vpc_id": "vpc-069c05c79cb4f0935",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:listener/app/main-alb/eb941f1eaea6b7a9/3273ff15440ab3f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:listener/app/main-alb/eb941f1eaea6b7a9/3273ff15440ab3f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:loadbalancer/app/main-alb/eb941f1eaea6b7a9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_lb.alb",
            "aws_lb_target_group.alb_target",
            "aws_security_group.alb_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1",
            "arn_suffix": "targetgroup/main-alb-target-group/d88fec6d998cded1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "main-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_target_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1-20210826133906385300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1",
            "target_id": "i-025903f4ace14d436"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_instance.web",
            "aws_lb_target_group.alb_target",
            "aws_security_group.alb_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1-20210826133906370500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730825214764:targetgroup/main-alb-target-group/d88fec6d998cded1",
            "target_id": "i-0e592c861d4b0b46d"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.alb_target",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:route-table/rtb-0c89feae8ebd3a685",
            "id": "rtb-0c89feae8ebd3a685",
            "owner_id": "730825214764",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main_db_private_rt"
            },
            "tags_all": {
              "Name": "main_db_private_rt"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:route-table/rtb-02e3df4ab0e3deadf",
            "id": "rtb-02e3df4ab0e3deadf",
            "owner_id": "730825214764",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cf5313b6cdfc172",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_public_rt"
            },
            "tags_all": {
              "Name": "main_public_rt"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa415481b8d436b0",
            "route_table_id": "rtb-0c89feae8ebd3a685",
            "subnet_id": "subnet-0ae96266b28a60158"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_route_table.db_private",
            "aws_subnet.db_private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082cb53d6fecf7f65",
            "route_table_id": "rtb-0c89feae8ebd3a685",
            "subnet_id": "subnet-09cfca30c1f7485ae"
          },
          "dependencies": [
            "aws_route_table.db_private",
            "aws_subnet.db_private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db192e907e8a5489",
            "route_table_id": "rtb-02e3df4ab0e3deadf",
            "subnet_id": "subnet-037ba56ba98683364"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0815414d4a0b53855",
            "route_table_id": "rtb-02e3df4ab0e3deadf",
            "subnet_id": "subnet-003967d1ff648f21a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:security-group/sg-0afaa4940b943a43d",
            "description": "Allow HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afaa4940b943a43d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "730825214764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "alb_sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:security-group/sg-0287ec97062717228",
            "description": "Allow from ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0287ec97062717228",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07102bbd6d2f05cda"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "730825214764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "db_sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:security-group/sg-07102bbd6d2f05cda",
            "description": "Allow HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07102bbd6d2f05cda",
            "ingress": [
              {
                "cidr_blocks": [
                  "112.169.201.211/32"
                ],
                "description": "SSH for WEB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afaa4940b943a43d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0afaa4940b943a43d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "730825214764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "web_sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:subnet/subnet-0ae96266b28a60158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-0ae96266b28a60158",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730825214764",
            "tags": {
              "Name": "main_db_private_0",
              "Network": "private"
            },
            "tags_all": {
              "Name": "main_db_private_0",
              "Network": "private"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:subnet/subnet-09cfca30c1f7485ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.112.0/20",
            "id": "subnet-09cfca30c1f7485ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730825214764",
            "tags": {
              "Name": "main_db_private_1",
              "Network": "private"
            },
            "tags_all": {
              "Name": "main_db_private_1",
              "Network": "private"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:subnet/subnet-037ba56ba98683364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-037ba56ba98683364",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730825214764",
            "tags": {
              "Name": "main_public_0"
            },
            "tags_all": {
              "Name": "main_public_0"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:subnet/subnet-003967d1ff648f21a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-003967d1ff648f21a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730825214764",
            "tags": {
              "Name": "main_public_1"
            },
            "tags_all": {
              "Name": "main_public_1"
            },
            "vpc_id": "vpc-069c05c79cb4f0935"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730825214764:vpc/vpc-069c05c79cb4f0935",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1aef29f5fa7cad5",
            "default_route_table_id": "rtb-0688b979a2859a791",
            "default_security_group_id": "sg-0017d40107effe5ea",
            "dhcp_options_id": "dopt-319de65a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-069c05c79cb4f0935",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0688b979a2859a791",
            "owner_id": "730825214764",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}